@@ -89,8 +89,8 @@ class DB
 				$i++;
 			}
 			//printf($e);
-			if ($e->errorInfo[1]==1062 || $e->errorInfo[1]==23000)
-				echo "\nError: Insert would create duplicate row, skipping\n";
+			//if ($e->errorInfo[1]==1062 || $e->errorInfo[1]==23000)
+				//echo "\nError: Insert would create duplicate row, skipping\n";
 			return false;
 		}
 	}
@@ -116,8 +116,8 @@ class DB
 				$i++;
 			}
 			//printf($e);
-			if ($e->errorInfo[1]==1062 || $e->errorInfo[1]==23000)
-				echo "\nError: Update would create duplicate row, skipping\n";
+			//if ($e->errorInfo[1]==1062 || $e->errorInfo[1]==23000)
+				//echo "\nError: Update would create duplicate row, skipping\n";
 			return false;
 		}
 	}
