@@ -70,9 +70,6 @@ class Nfo
 		$r = false;
 		if ($possibleNFO === false)
 			return $r;
-		//ignore encrypted nfos
-		if (preg_match('/^=newz\[NZB\]=\w+/', $possibleNFO))
-			return $r;
 		if (preg_match('/(<?xml|;\s*Generated\sby.+SF\w|^\s*PAR|\.[a-z0-9]{2,7}\s[a-z0-9]{8}|^\s*RAR|\A.{0,10}(JFIF|matroska|ftyp|ID3))/i', $possibleNFO))
 			return $r;
 		// Make sure it's not too big, also exif_imagetype needs a minimum size or else it doesn't work.
@@ -134,7 +131,8 @@ class Nfo
 	// Adds an NFO found from predb, rar, zip etc...
 	public function addAlternateNfo($db, $nfo, $release)
 	{
-		if ($this->isNFO($nfo) && $release["id"] > 0)
+		//if ($this->isNFO($nfo) && $release["id"] > 0)
+		if ($release["id"] > 0)
 		{
 			$this->addReleaseNfo($release["id"]);
 			if ($db->dbSystem() == "mysql")
@@ -200,7 +198,7 @@ class Nfo
 
 			foreach ($res as $arr)
 			{
-				$site->alternate_nntp == "1" ? $nntp->doConnect_A() : $nntp->doConnect();
+				$site->alternate_nntp == 1 ? $nntp->doConnect_A() : $nntp->doConnect();
 				$fetchedBinary = $nzbcontents->getNFOfromNZB($arr['guid'], $arr['id'], $arr['groupid'], $nntp);
 				if ($fetchedBinary !== false)
 				{
